fix: fix overflow

--- a/src/styles/pages/_education.scss
+++ b/src/styles/pages/_education.scss
@@ -7,6 +7,7 @@
         background-size: contain;
         background-position: left top;
         background-repeat: no-repeat;
+        overflow-x: hidden;
 
         @include mixins.respond-to(desktop) {
             background-position: left -120% top 0;
